[package]
name = "onebrc-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
hashbrown = "0.16.1"

[[bin]]
name = "naive"
path = "src/bin/001_naive.rs"

[[bin]]
name = "hashbrown"
path = "src/bin/002_hashbrown.rs"

[[bin]]
name = "io_stack_buffer"
path = "src/bin/003_io_stack_buffer.rs"

[[bin]]
name = "parsing"
path = "src/bin/004_parsing.rs"
