[package]
name = "onebrc"
version = "0.1.0"
edition = "2024"

[target]
features = { "aes" = true }

[profile.release]
debug = true

[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
hashbrown = "0.16.1"
memmap2 = "0.9.9"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }

[[bench]]
name = "hashtable"
harness = false

[[bench]]
name = "byte_buffer"
harness = false

[[bin]]
name = "naive"
path = "src/bin/001_naive.rs"

[[bin]]
name = "hashbrown"
path = "src/bin/002_hashbrown.rs"

[[bin]]
name = "io_stack_buffer"
path = "src/bin/003_io_stack_buffer.rs"

[[bin]]
name = "parsing"
path = "src/bin/004_parsing.rs"

[[bin]]
name = "stream"
path = "src/bin/005_stream.rs"

[[bin]]
name = "custom_hash_table"
path = "src/bin/006_custom_hash_table.rs"

[[bin]]
name = "reading_rows"
path = "src/bin/007_reading_rows.rs"

[[bin]]
name = "branching"
path = "src/bin/008_branching.rs"

[[bin]]
name = "batching"
path = "src/bin/009_batching.rs"

[[bin]]
name = "mmap"
path = "src/bin/010_mmap.rs"

[[bin]]
name = "avx512"
path = "src/bin/011_avx512.rs"
